@@ -35,6 +35,8 @@
    - myIGridList: has new 'my-row-changed' signal (todo #1371).
    - my_igridlist_add_row(): add user data argument.
    - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
+   - my_igridlist_set_has_row_number(): new function.
+   - my_igridlist_set_has_up_down_buttons: new function.
    - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
    - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
    - Periodicity properties: review UI margins (todo #1366).
